--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             </div>
             <div class="indented spaced">
                 <a class="landinglink" href="https://twitter.com/hazeldotnet" target="_blank" lang="en">> twitter</a>
-                <a class="landinglink" href="https://twitter.com/hazeldotnet" target="_blank" lang="jp">> ツイッター</a>
+                <a class="landinglink" href="https://twitter.com/hazeldotnet" target="_blank" lang="ja">> ツイッター</a>
             </div>
             <div class="indented spaced">
                 <a class="landinglink" href="https://github.com/hazeldotnet" target="_blank" lang="en">> github</a>
-                <a class="landinglink" href="https://github.com/hazeldotnet" target="_blank" lang="jp">> github</a>
+                <a class="landinglink" href="https://github.com/hazeldotnet" target="_blank" lang="ja">> github</a>
             </div>
         </div>
         </div>
