Fixed broken link

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <br>
                 <br>I also build mechanical keyboards, and I design custom keyboards from time to time, so you may see some of those when I have the funds.
                 <br>
-                <br>This site is meant to be a sort of portfolio to keep track of my myriad projects that I constantly juggle. Feel free to get in touch if you have any questions or just want to chat, my links can be found <a href="links.html">here</a>.
+                <br>This site is meant to be a sort of portfolio to keep track of my myriad projects that I constantly juggle. Feel free to get in touch if you have any questions or just want to chat, my links can be found <a href="index.html">here</a>.
                 </p>
             </div>
         </div>
