--- a/homelab.html
+++ b/homelab.html
@@ -34,7 +34,7 @@
   <span class="yellow">● CPU</span>       : i5-8500
   <span class="yellow">● GPU</span>       : 1060 GB
   <span class="yellow">● RAM</span>       : 16GB DDR4
-  <span class="expandable-text" onclick="toggleExpand(this)" style="cursor:pointer;"><span class="pink">+ Services</span>  : Jellyfin...⤵<span class="expandable-content" style="display:none;">
+  <span class="expandable-text" onclick="toggleExpand(this)" style="cursor:pointer;"><span class="pink">● Services</span>  : Jellyfin...⤵<span class="expandable-content" style="display:none;">
               : Docker
               : Minecraft Server (2x)
               : Rust Server
