--- a/homelab.html
+++ b/homelab.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>guest@hazelnet:~$</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <script src="script.js"></script>
 </head>
 <body>
