add open graph meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>guest@hazelnet:~$</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="hazel's network" />
+    <meta property="og:description" content="brought to you by technologies beyond my comprehension." />
+    <meta property="og:image" content="https://hazelnet.tech/images/Night2.png" />
+    
 </head>
 <body>
     <div class="terminal">
